Added download button icon have to add the functionality invloved

--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -295,6 +295,16 @@ col.StockList{
 col.StockListCross{
     width: 50px;
 }
+col.StockTableName{
+    width:calc(100% - 64px)
+}
+col.DownloadButton{
+    width: 64px;
+}
+input.DownloadButton{
+    width:64px;
+    height:64px;
+}
 div.ErrorListCont{
     position: fixed;
     z-index: 1;
