--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -120,7 +120,7 @@
                                 <td class="TableHeading">{{symbolName}}</td>
                                 <td>
                                     <form action="/downloadTable" method="POST">
-                                        <input type="image submit" src="../static/img/FinalTransDownload32.png" value="{{symbolName}}"></input>
+                                        <button type="submit" name="DownloadButton" value="{{symbolName}}" class = "DownloadButton"></button>
                                     </form>
                                 </td>
                             </tr>
