making session things

--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -18,9 +18,9 @@
     <div class="NavBarHeader">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Home</a></li>
-                <li> <a href="{{ url_for('sort_page') }}">Go to Stocks Page</a></li>
+                <li><a href="{{url_for('storehist')}}">Store this in history</a></li>
+                <li><a href="{{url_for('add_to_fav')}}">Add to fav</a></li>
+                <li><a href="{{ url_for('sort_page') }}">Go to Stocks Page</a></li>
                 <!-- <a href="#">Home</a> -->
                 <!-- <a href="#">About us</a> -->
             </ul>
