--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -66,6 +66,7 @@ input[type="password"] {
 
 div.NavBarHeader{
     height: 50px;
+    background-color: gray;
 }
 
 /* Add this to your existing style.css */
@@ -351,6 +352,22 @@ div.StockListAndSearch {
     height: calc(100vh - 50px);
     /* display: ; */
     border-right: 3px solid #eeeded;
+}
+div.SideBarAndStockSummary{
+    width: 100%;
+    height: calc(100vh - 50px);
+    display: flex;
+}
+div.SideBar{
+    width:400px;
+    height: 100%;
+    background-color: white;
+    overflow: auto;
+}
+div.StockSummary{
+    width: calc(100% - 400px);
+    height: 100%;
+    background-color: green;
 }
 div.StockList{
     width: 100%;
