--- a/COP_290_Assignment1-main/templates/sort.html
+++ b/COP_290_Assignment1-main/templates/sort.html
@@ -21,34 +21,39 @@
         <div class="sidebar">
 
 
-        <form action="/process_filters" method="POST">
-            <label for="Volume">Volume  </label>
+        <form class='filter'action="/process_filters" method="POST">
+            <label class="font-inc" for="Volume">Volume  </label>
             <br>
-            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for Volume">
-            <input type="number" name = 'm_lim[]' placeholder="Max Limit for Volume">
+            <input type="number" name = 'l_lim[]' placeholder="{{filter_lims['vol'][0]}}">
+            <input type="number" name = 'm_lim[]' placeholder="{{filter_lims['vol'][1]}}">
             <br>
-            <label for="pe_ratio">P/E Ratio</label>
             <br>
-            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for PE ratio">
-            <input type="number" name = 'm_lim[]' placeholder="Max Limit for PE ratio">
+            <label class="font-inc" for="pe_ratio">P/E Ratio</label>
+        <br>
+            <input type="number" name = 'l_lim[]' placeholder="{{filter_lims['pe_rat'][0]}}">
+            <input type="number" name = 'm_lim[]' placeholder="{{filter_lims['pe_rat'][1]}}">
             <br>
-            <label for="marketCap">Market Cap</label>
             <br>
-            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for Market Cap">
-            <input type="number" name = 'm_lim[]' placeholder="Max Limit for Market Cap">
+            <label class="font-inc" for="marketCap">Market Cap</label>
+        <br>
+            <input type="number" name = 'l_lim[]' placeholder="{{filter_lims['marketCap'][0]}}">
+            <input type="number" name = 'm_lim[]' placeholder="{{filter_lims['marketCap'][1]}}">
             <br>
-            <label for="Price">Price</label>
             <br>
-            <input type="number" name = 'l_lim[]' placeholder="Lower Limit for Price">
-            <input type="number" name = 'm_lim[]' placeholder="Max Limit for Price">
+            <label class="font-inc" for="Price">Price</label>
+<br>
+            <input type="number" name = 'l_lim[]' placeholder="{{filter_lims['price'][0]}}">
+            <input type="number" name = 'm_lim[]' placeholder="{{filter_lims['price'][1]}}">
             <br>
-    
-            <label for="">Industry Filters :</label>
+            <br>
+            <label class="font-inc"  for="">Industry Filters :</label>
+            <br>
             <br>
             {% for i in range(0,12) %}
 
             <input type="checkbox" name="checked_filter_boxes[]" value={{i}} {% if checked_filter_boxes[i]=='yes' %} checked {% endif %}>
             <label for="checkbox">{{Industries_filter[i]}}</label>
+            <br>
             <br>
             {% endfor %}
             <input type="submit" value="Submit">
