--- a/COP_290_Assignment1-main/static/sort_style.css
+++ b/COP_290_Assignment1-main/static/sort_style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
 }
 
 header {
@@ -24,18 +24,18 @@ nav ul li {
 
 .container {
     display: flex;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .sidebar {
     width: 25%;
     padding: 1rem;
     background-color: #f4f4f4;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .content {
-    /* flex-grow: 1; */
+    /* flex-grow: 1;  */
     padding: 1rem;
 }
 
@@ -70,7 +70,7 @@ tr:hover{
 }
 
 .content{
-    /* overflow-x: auto; */
+    overflow-x: auto;
 }
 
 .table-button{
@@ -90,4 +90,13 @@ tr:hover{
     position: sticky;
     top: 0;
     z-index: 2;
+}
+
+.filter{
+    height : 100vh;
+    font-size: 16px;
+}
+
+.font-inc{
+    font-size: 20px;
 }
