--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -363,11 +363,13 @@ div.SideBar{
     height: 100%;
     background-color: white;
     overflow: auto;
+    border-right: 3px solid #f7f7f7;
 }
 div.StockSummary{
     width: calc(100% - 400px);
     height: 100%;
-    background-color: green;
+    background-color: white;
+    /*! display: flex; */
 }
 div.StockList{
     width: 100%;
@@ -680,4 +682,22 @@ button.StockSubmitButton{
     
     padding: 10px;
     font-size: 20px;
+}
+
+div.IndicesSummaryHeading{
+    /*! width: 100%; */
+    height: 50px;
+    font-size: 32px;
+    text-align: left;
+    vertical-align: middle;
+    padding: 10px;
+    padding-left: 20px;
+}
+div.IndexGraphContainer{
+    width: 100%;
+    overflow: auto;
+}
+div.StockIndices{
+    width: 400px;
+    height: 400px;
 }
