--- a/COP_290_Assignment1-main/templates/sort.html
+++ b/COP_290_Assignment1-main/templates/sort.html
@@ -34,7 +34,7 @@
             <input type="number" name = 'm_lim[]' placeholder="{{filter_lims['pe_rat'][1]}}">
             <br>
             <br>
-            <label class="font-inc" for="marketCap">Market Cap</label>
+            <label class="font-inc" for="marketCap">Market Cap(in Cr)</label>
         <br>
             <input type="number" name = 'l_lim[]' placeholder="{{filter_lims['marketCap'][0]}}">
             <input type="number" name = 'm_lim[]' placeholder="{{filter_lims['marketCap'][1]}}">
