Modified register.html and code to include a confirm password field

--- a/COP_290_Assignment1-main/templates/register.html
+++ b/COP_290_Assignment1-main/templates/register.html
@@ -26,6 +26,9 @@
                 <input type="password" name="password" placeholder="Password" required>
             </div>
             <div class="form-group">
+                <input type="password" name="confirmPass" placeholder="Confirm Password" required>
+            </div>
+            <div class="form-group">
                 <button type="submit" class="LoginButton" >Register</button>
             </div>
             <!--
