Fixed layout of sort_style.css

--- a/COP_290_Assignment1-main/static/sort_style.css
+++ b/COP_290_Assignment1-main/static/sort_style.css
@@ -24,19 +24,23 @@ nav ul li {
 
 .container {
     display: flex;
-    min-height: 100vh;
+    height: calc(100vh - 67px);
 }
 
 .sidebar {
     width: 25%;
     padding: 1rem;
     background-color: #f4f4f4;
-    min-height: 100vh;
+    height: 100%;
+    padding-bottom: 0px;
+    overflow: auto;
 }
 
 .content {
     /* flex-grow: 1;  */
     padding: 1rem;
+    padding-bottom: 0px;
+    height: 100%;
 }
 
 ul {
