--- a/COP_290_Assignment1-main/static/sort_style.css
+++ b/COP_290_Assignment1-main/static/sort_style.css
@@ -28,12 +28,13 @@ nav ul li {
 }
 
 .sidebar {
-    width: 25%;
+    width: 20%;
     padding: 1rem;
     background-color: #f4f4f4;
     height: 100%;
-    padding-bottom: 0px;
+    /*! padding-bottom: 5px; */
     overflow: auto;
+    padding-left: 5px;
 }
 
 .content {
@@ -52,11 +53,65 @@ ul {
 li {
     margin-bottom: 0.5rem;
 }
+table.FilterHeading{
+    width: 100%;
+    border: none;
+}
+tr.FilterHeading{
+    border: none;
+}
+th.FilterHeading{
+    border: none;
+}
+table.CheckBoxList{
+
+    border: none;
+}
+tr.CheckBoxList{
+
+    border: none;
+}
+td.CheckBoxList{
+
+    border: none;
+}
+input.CheckBoxList{
+
+}
+label.CheckBoxList{
+
+}
 
 
+
+tr.FilterInputs{
+    width: 100%;
+    border: none;
+}
+td.FilterInputs{
+    padding: 0px;
+    border: none;
+}
+input.FilterInputs{
+    width: 17em;
+    padding: 5px;
+    font-size: 20px;
+    border: none;
+}
+input.SubmitButton{
+    
+    margin: auto;
+    border: none;
+    padding: 15px;
+    font-size: 20px;
+    background-color: #0ddb0d;
+    color: white;
+    margin-left: 15px;
+}
 table{
     /* border-collapse: collapse; */
-    width : 100%
+    width : 100%;
+    margin: 10px;
 }
 
 th,td{
