--- a/COP_290_Assignment1-main/static/sort_style.css
+++ b/COP_290_Assignment1-main/static/sort_style.css
@@ -35,6 +35,7 @@ nav ul li {
     /*! padding-bottom: 5px; */
     overflow: auto;
     padding-left: 5px;
+    padding-bottom: 0px;
 }
 
 .content {
