--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -194,6 +194,20 @@ tr.StockInfoTable {
     border-bottom: 2px solid #d9d9d9;
     border-radius: 5px;
 }
+td.StockInfoTable{
+
+}
+button.LoadFavButton{
+    margin: 10px;
+    padding: 15px;
+    font-size: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: none;
+    background-color: #0c0;
+    color: white;
+    border-radius: 8px;
+}
 tr.StockInfoTable:hover{
     background-color: #dbdbdb;
 }
@@ -282,7 +296,7 @@ main {
     flex-wrap: wrap;
     justify-content: space-between;
     /* padding: 20px; */
-    height: calc(100vh - 50px);
+    height: calc(100vh - 82px);
 }
 table.StockList{
     width: 100%;
@@ -368,7 +382,7 @@ div.StockListAndSearch {
 }
 div.SideBarAndStockSummary{
     width: 100%;
-    height: calc(100vh - 50px);
+    height: 100%;
     display: flex;
 }
 div.SideBar{
@@ -377,11 +391,13 @@ div.SideBar{
     background-color: white;
     overflow: auto;
     border-right: 3px solid #f7f7f7;
+    text-align: center;
+    height: calc(100% -15px);
 }
 div.StockSummary{
     width: calc(100% - 400px);
     height: 100%;
-    background-color: white;
+    background-color: purple;
     /*! display: flex; */
 }
 div.StockList{
@@ -713,12 +729,18 @@ div.IndicesSummaryHeading{
     vertical-align: middle;
     padding: 10px;
     padding-left: 20px;
+    background-color: white;
 }
 div.IndexGraphContainer{
     width: 100%;
     overflow: auto;
+    background-color: white;
+    /*! height: \); */
+    /*! height: calc(100% -70px); */
+    height: calc(100% - 70px);
+    /*! height: 10px; */
 }
 div.StockIndices{
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 150px;
 }
