--- a/COP_290_Assignment1-main/templates/loginWelcome.html
+++ b/COP_290_Assignment1-main/templates/loginWelcome.html
@@ -12,20 +12,18 @@
 <script src="https://cdn.bokeh.org/bokeh/release/bokeh-mathjax-3.3.3.min.js" crossorigin="anonymous"></script>
 
 <body>
-    <div class="NavBarHeader">
-        <nav>
-            <ul>
-                <li><a href="{{url_for('storehist')}}">Store this in history</a></li>
-                <li><a href="{{url_for('add_to_fav')}}">Add to fav</a></li>
-                <li><a href="{{ url_for('sort_page') }}">Go to Stocks Page</a></li>
-                <li><a href="{{url_for('login_welcome')}}">Login Welcome</a></li>   
-            </ul>
-            <ul class="right-links">
-                <li><a href="#">{{username}}</a></li>
-                <li><a href="{{url_for('logout')}}">Logout</a></li>
-            </ul>
-        </nav>
-    </div>
+    <header class="header">
+        <!-- <h1 class="logo"><a href="#" class="color-change">MarketMinds</a></h1> -->
+        <!-- <h1 class="logo"><a href="#" class="color-change"> -->
+            <img src="../static/img/Color logo - no background.png" alt="Image should have been here" id="logo">
+        <!-- </a></h1> -->
+      <ul class="main-nav">
+          <li><a href="{{url_for('login_welcome')}}">Home</a></li>
+          <li><a href="{{url_for('dashboard')}}">Graph Analysis</a></li>
+          <li><a href="{{url_for('sort_page')}}">Filter Stocks</a></li>
+          <li><a href="{{url_for('logout')}}">Logout</a></li>
+      </ul>
+    </header> 
     <main>
         <div class="SideBarAndStockSummary">
             <div class="SideBar">
