--- a/COP_290_Assignment1-main/templates/sort.html
+++ b/COP_290_Assignment1-main/templates/sort.html
@@ -7,16 +7,18 @@
     <title>Stocks Page</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
+    <header class="header">
+        <!-- <h1 class="logo"><a href="#" class="color-change">MarketMinds</a></h1> -->
+        <!-- <h1 class="logo"><a href="#" class="color-change"> -->
+            <img src="../static/img/Color logo - no background.png" alt="Image should have been here" id="logo">
+        <!-- </a></h1> -->
+      <ul class="main-nav">
+          <li><a href="{{url_for('login_welcome')}}">Home</a></li>
+          <li><a href="{{url_for('dashboard')}}">Graph Analysis</a></li>
+          <li><a href="{{url_for('sort_page')}}">Filter Stocks</a></li>
+          <li><a href="{{url_for('logout')}}">Logout</a></li>
+      </ul>
+    </header> 
     <div class="container">
         <div class="sidebar">
 
