fixed session handling

--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -108,7 +108,9 @@ div.LoginInfo {
     text-align: right;
     color: white;
 }
-
+.reg_link{
+    color: black;
+}
 body {
     font-family: 'Arial', sans-serif;
     /*! background-color: #f2f2f2; */
