--- a/COP_290_Assignment1-main/templates/login.html
+++ b/COP_290_Assignment1-main/templates/login.html
@@ -30,7 +30,7 @@
             </div>
             <label>{{loginErrorMsg}}</label>
         </form>
-        <p>Don't have an account? <a href="/register">Register here</a></p>
+        <p>Don't have an account? <a href="/register" class="reg_link">Register here</a></p>
     </div>
 </body>
 </html>
