--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -118,7 +118,7 @@
             </div>
             <div class="set_to_fav">
                 <form action="/set_to_fav">
-                    <button type="submit" class="set_fav_button">Set to Favourites</button>
+                    <button type="submit" class="set_fav_button">Set Favourite</button>
                 </form>
             </div>
         </div>
