--- a/COP_290_Assignment1-main/templates/register.html
+++ b/COP_290_Assignment1-main/templates/register.html
@@ -43,7 +43,7 @@
             {% endwith %}
             -->
         </form>
-        <p>Already have an account? <a href="/">Login here</a></p>
+        <p>Already have an account? <a href="/" class="LoginLink">Login here</a></p>
     </div>
 </body>
 </html>
