Fixed table size issue

--- a/COP_290_Assignment1-main/static/sort_style.css
+++ b/COP_290_Assignment1-main/static/sort_style.css
@@ -228,3 +228,9 @@ ul {
     padding: 0;
     list-style: none;
   }
+  ul.sortedStockList{
+    width:100%;
+  }
+  div.sortedStockList{
+    width: 100%;
+  }
