--- a/COP_290_Assignment1-main/templates/sort.html
+++ b/COP_290_Assignment1-main/templates/sort.html
@@ -111,8 +111,8 @@
 
         </div>
 
-        <div class="content">
-            <ul id="sortedStockList">
+        <div class="content sortedStockList">
+            <ul id="sortedStockList" class="sortedStockList">
                 <table>
                     <thead>
                         <tr class="button-row">
